--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chalk": "^3.0.0",
     "cookie-parser": "^1.4.6",
     "debug": "^4.1.1",
+    "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "jquery": "^3.4.1",
     "morgan": "^1.9.1",
